creating nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <h2 class="ch">Ch.</h2>
+        <div class="navbar">
+            <a href="#">Collection</a>
+            <a href="#">Exhibitions</a>
+            <a href="#">Events</a>
+            <a href="#">Buy Tickets</a>
+          </div>
     </body>
 </html>
