--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
             <a href="#">Events</a>
             <a href="#">Buy Tickets</a>
           </div>
+        <div class="topic">
+            <h1>Selections from the Art Institute of Chicago</h1>
+        </div>
     </body>
 </html>
