--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
         <div class="topic">
             <h1>Selections from the Art Institute of Chicago</h1>
         </div>
+        <div class="main">
+             <div class="alien"> <img src="/images/aliens.jpeg" width="385" height="210"><h1 style="font-size: 20px;">Henri Martisse Modern ArtGallery 391 French, 1869-1954</h1></div>
+             <div class="man"><img src="/images/man.jpeg" width="560" height="560"><h1>Henri Matisse considered Bathers by a river to be one of the five most "pivotal" bright works of his carrer.</h1></div>
+            <div class="girl"> <img src="/images/girl.jpeg" width="300" height="410"></div>
+        </div>
+        <div>
+            <img src="/images/food.jpeg">
+        </div>
     </body>
 </html>
