changing class name

--- a/index.html
+++ b/index.html
@@ -6,25 +6,31 @@
         <meta name="viewport" content="width=
         , initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h2 class="ch">Ch.</h2>
+        <h2 class="logo">Ch.</h2>
         <div class="navbar">
             <a href="#">Collection</a>
             <a href="#">Exhibitions</a>
             <a href="#">Events</a>
-            <a href="#">Buy Tickets</a>
+            <a href="#">Buy Tickets</a> 
           </div>
-        <div class="topic">
+        <div class="top_header">
             <h1>Selections from the Art Institute of Chicago</h1>
         </div>
-        <div class="main">
-             <div class="alien"> <img src="/images/aliens.jpeg" width="385" height="210"><h1 style="font-size: 20px;">Henri Martisse Modern ArtGallery 391 French, 1869-1954</h1></div>
-             <div class="man"><img src="/images/man.jpeg" width="560" height="560"><h1>Henri Matisse considered Bathers by a river to be one of the five most "pivotal" bright works of his carrer.</h1></div>
+        <div class="main_images">
+             <div class="alien"> <img src="/images/aliens.jpeg" width="385" height="210">
+                <h1 style="font-size: 20px;">Henri Martisse Modern ArtGallery 391 French, 1869-1954</h1></div>
+             <div class="man"><img src="/images/man.jpeg" width="560" height="560">
+                <h1>Henri Matisse considered Bathers by a river to be one of the five most "pivotal" bright works of his carrer.</h1></div>
             <div class="girl"> <img src="/images/girl.jpeg" width="300" height="410"></div>
         </div>
-        <div>
+  
+        <!-- <div>
             <img src="/images/food.jpeg">
-        </div>
+        </div> -->
     </body>
 </html>
