fixing nav bar and implenting highlights

--- a/index.html
+++ b/index.html
@@ -11,25 +11,36 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h2 class="logo">Ch.</h2>
-        <div class="navbar">
-            <a href="#">Collection</a>
-            <a href="#">Exhibitions</a>
-            <a href="#">Events</a>
-            <a href="#">Buy Tickets</a> 
-          </div>
+        <nav>
+            <h1 class="logo">Ch</h1>
+            <ul>
+                <li><a href="#">Collection</a></li>
+                <li><a href="#">Exhibitions</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Buy Tickets</a></li>
+            </ul>
+        </nav>
+        
         <div class="top_header">
             <h1>Selections from the Art Institute of Chicago</h1>
         </div>
         <div class="main_images">
-             <div class="alien"> <img src="/images/aliens.jpeg" width="385" height="210">
+             <div class="alien"> <img src="assests/images/aliens.jpeg" width="385" height="210">
                 <p style="font-size: 20px;">Henri Martisse Modern ArtGallery 391 French, 1869-1954</p></div>
-             <div class="man"><img src="/images/man.jpeg" width="560" height="560">
+             <div class="man"><img src="assests/images/man.jpeg" width="560" height="560">
                 <p>Henri Matisse considered Bathers by a river to be one of the five most "pivotal" bright works of his carrer.</p></div>
-            <div class="girl"> <img src="/images/girl.jpeg" width="300" height="410"></div>
+            <div class="girl"> <img src="assests/images/girl.jpeg" width="300" height="410"></div>
         </div>
-        <div>
-            <img src="/images/food.jpeg">
+        <div class="foodimage-text">
+            <img src="assests/images/food.jpeg">
+            <div class="about-text">
+                <p>Henri Martisse<br>Oil canvas<br>Gallery<br>Membership</p>
+                <p>Art, Paul Cezanne once claimed,<br>is a harmony running parallel to<br>the real nature.</p>
+                <p>This painting, one of Cezanne's<br>rare signed works, was part of<br>an important exhibition.</p>
+            </div>
+        </div>
+        <div class="highlights">
+            <p>enjoy the highlights from this<br>pioneering Collection.</p>
         </div>
     </body>
 </html>
