fixing the main images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="top_header">
         <h1>Selections from the Art Institute of Chicago</h1>
     </div>
-    <div class="main_images">
+    <!-- <div class="main_images"> -->
 
         <div class="features-wrapper">
 
@@ -35,27 +35,25 @@
                     <img src="assests/images/aliens.jpeg" 
                     class="feature-image">
                 </div>
-                <p style="font-size: 20px;" class="paragraph-text">Henri Martisse Modern ArtGallery 391 French,
+                <p style="font-size: 20px;" class="paragraph-text">Henri Martisse Modern ArtGallery 391<br>French,
                     1869-1954</p>
             </div>
             <div class="feature-item-container">
                 <div class="feature-image-wrapper">
                     <img src="assests/images/man.jpeg" class="feature-image">
                 </div>
-                <p style="font-size: 20px;" class="paragraph-text">Henri Martisse Modern ArtGallery 391 French,
-                    1869-1954</p>
+                <p style="font-size: 22px;" class="paragraph-text">Henri Matisse considered Bathers by a<br>
+                River to be one of the five most "pivotal"<br>bright works of his carrer.</p>
             </div>
             
             <div class="feature-item-container">
                 <div class="feature-image-wrapper">
-                    <img src="assests/images/girl.jpeg" class="feature-image">
+                    <img src="assests/images/girl.jpeg" style="height: 410px;" class="feature-image">
                 </div>
-                <p style="font-size: 20px;" class="paragraph-text">Henri Martisse Modern ArtGallery 391 French,
-                    1869-1954</p>
             </div>
         </div>
 
-    </div>
+    <!-- </div> -->
     <!-- <div class="man"><img src="assests/images/man.jpeg" width="560" height="560">
                 <p style="font-size: 35px; width: 680px; letter-spacing: 1px;">Henri Matisse considered Bathers by a<br> to be one of the five most "pivotal"<br>bright works of his carrer.</p></div>
             <div class="girl"> <img src="assests/images/girl.jpeg" width="300" height="410"></div> -->
