adding highlight texts

--- a/index.html
+++ b/index.html
@@ -28,30 +28,29 @@
     </div>
     <!-- <div class="main_images"> -->
 
-        <div class="features-wrapper">
+    <div class="features-wrapper">
 
-            <div class="feature-item-container">
-                <div class="feature-image-wrapper">
-                    <img src="assests/images/aliens.jpeg" 
-                    class="feature-image">
-                </div>
-                <p style="font-size: 20px;" class="paragraph-text">Henri Martisse Modern ArtGallery 391<br>French,
-                    1869-1954</p>
+        <div class="feature-item-container">
+            <div class="feature-image-wrapper">
+                <img src="assests/images/aliens.jpeg" class="feature-image">
             </div>
-            <div class="feature-item-container">
-                <div class="feature-image-wrapper">
-                    <img src="assests/images/man.jpeg" class="feature-image">
-                </div>
-                <p style="font-size: 22px;" class="paragraph-text">Henri Matisse considered Bathers by a<br>
+            <p style="font-size: 20px;" class="paragraph-text">Henri Martisse Modern ArtGallery 391<br>French,
+                1869-1954</p>
+        </div>
+        <div class="feature-item-container">
+            <div class="feature-image-wrapper">
+                <img src="assests/images/man.jpeg" class="feature-image">
+            </div>
+            <p style="font-size: 22px;" class="paragraph-text">Henri Matisse considered Bathers by a<br>
                 River to be one of the five most "pivotal"<br>bright works of his carrer.</p>
-            </div>
-            
-            <div class="feature-item-container">
-                <div class="feature-image-wrapper">
-                    <img src="assests/images/girl.jpeg" style="height: 410px;" class="feature-image">
-                </div>
+        </div>
+
+        <div class="feature-item-container">
+            <div class="feature-image-wrapper">
+                <img src="assests/images/girl.jpeg" style="height: 410px;" class="feature-image">
             </div>
         </div>
+    </div>
 
     <!-- </div> -->
     <!-- <div class="man"><img src="assests/images/man.jpeg" width="560" height="560">
@@ -72,6 +71,13 @@
         <h4 class="paragraph-text">Enjoy the highlights from this<br>pioneering Collection.</h4>
         <h2 class="paragraph-text m-font-size">This painting, one of Cezanne's rare signed<br>works, was part of an
             important exhibition<br> urged on the artist by the Parisian art<br>dealer Ambroise Vollard in 1895.</h2>
+    </div>
+    <div class="highlight-bottom2 paragraph-text">
+        <h1>Catalogs</h1>
+        <p>The big library<br>comprise a<br>major art and<br> architecture
+        <br>research tp<br>Collection of<br> print titles,<br>catalogs, serial<br>
+        subscriptions,<br>and digital<br>Collections.</p>
+        <p>Artist Rights<br>Society (ARS),<br>New York / VG<br>Bild-Kunst,<br>Bonn.</p>
     </div>
 </body>
 
