add nav bar functional

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 
 <body>
     <nav>
-        <h1 class="logo">Ch</h1>
+        <h1 class="logo">Ch.</h1>
         <ul>
-            <li><a class="paragraph-text" href="#">Collection</a></li>
-            <li><a href="#">Exhibitions</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Buy Tickets</a></li>
+            <li><a href="#collection" class="paragraph-text">Collection</a></li>
+            <li><a href="#exhibitions" class="paragraph-text">Exhibitions</a></li>
+            <li><a href="#events" class="paragraph-text">Events</a></li>
+            <li><a class="paragraph-text">Buy Tickets</a></li>
         </ul>
     </nav>
 
     <div class="top_header">
-        <h1>Selections from the Art Institute of Chicago</h1>
+        <h1 class="top_header-item">Selections from the Art Institute of Chicago</h1>
     </div>
     <!-- <div class="main_images"> -->
 
-    <div class="features-wrapper">
+    <section id="collection" class="features-wrapper">
 
         <div class="feature-item-container">
             <div class="feature-image-wrapper">
@@ -50,35 +50,47 @@
                 <img src="assests/images/girl.jpeg" style="height: 410px;" class="feature-image">
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- </div> -->
     <!-- <div class="man"><img src="assests/images/man.jpeg" width="560" height="560">
                 <p style="font-size: 35px; width: 680px; letter-spacing: 1px;">Henri Matisse considered Bathers by a<br> to be one of the five most "pivotal"<br>bright works of his carrer.</p></div>
             <div class="girl"> <img src="assests/images/girl.jpeg" width="300" height="410"></div> -->
-    </div>
-    <div class="foodimage-text">
-        <img src="assests/images/food.jpeg">
-        <div class="about-text">
-            <h4>Henri Martisse<br>Oil canvas<br>Gallery<br>Membership</h4>
-            <p class="paragraph-text">Art, Paul Cezanne once claimed,<br>is a harmony running parallel to<br>the real
-                nature.</p>
-            <p class="paragraph-text">This painting, one of Cezanne's<br>rare signed works, was part of<br>an important
-                exhibition.</p>
+
+    <section id="exhibitions" >
+        <div class="foodimage-text">
+            <img src="assests/images/food.jpeg">
+            <div class="about-text">
+                <h4>Henri Martisse<br>Oil canvas<br>Gallery<br>Membership</h4>
+                <p class="paragraph-text">Art, Paul Cezanne once claimed,<br>is a harmony running parallel to<br>the
+                    real
+                    nature.</p>
+                <p class="paragraph-text">This painting, one of Cezanne's<br>rare signed works, was part of<br>an
+                    important
+                    exhibition.</p>
+            </div>
         </div>
-    </div>
-    <div class="highlight-bottom1">
-        <h4 class="paragraph-text">Enjoy the highlights from this<br>pioneering Collection.</h4>
-        <h2 class="paragraph-text m-font-size">This painting, one of Cezanne's rare signed<br>works, was part of an
-            important exhibition<br> urged on the artist by the Parisian art<br>dealer Ambroise Vollard in 1895.</h2>
-    </div>
-    <div class="highlight-bottom2 paragraph-text">
+
+        <div class="hihglight-bottom">
+            <div class="highlight-bottom1">
+                <h4 class="paragraph-text">Enjoy the highlights from this<br>pioneering Collection.</h4>
+                <h2 class="paragraph-text m-font-size">This painting, one of Cezanne's rare signed<br>works, was part of
+                    an
+                    important exhibition<br> urged on the artist by the Parisian art<br>dealer Ambroise Vollard in 1895.
+                </h2>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="events" class="highlight-bottom2 paragraph-text">
         <h1>Catalogs</h1>
         <p>The big library<br>comprise a<br>major art and<br> architecture
-        <br>research tp<br>Collection of<br> print titles,<br>catalogs, serial<br>
-        subscriptions,<br>and digital<br>Collections.</p>
+            <br>research tp<br>Collection of<br> print titles,<br>catalogs, serial<br>
+            subscriptions,<br>and digital<br>Collections.
+        </p>
         <p>Artist Rights<br>Society (ARS),<br>New York / VG<br>Bild-Kunst,<br>Bonn.</p>
-    </div>
+    </section>
 </body>
 
 </html>
