--- a/index.html
+++ b/index.html
@@ -52,12 +52,7 @@
         </div>
     </section>
 
-    <!-- </div> -->
-    <!-- <div class="man"><img src="assests/images/man.jpeg" width="560" height="560">
-                <p style="font-size: 35px; width: 680px; letter-spacing: 1px;">Henri Matisse considered Bathers by a<br> to be one of the five most "pivotal"<br>bright works of his carrer.</p></div>
-            <div class="girl"> <img src="assests/images/girl.jpeg" width="300" height="410"></div> -->
-
-    <section id="exhibitions" >
+    <section id="exhibitions" class="second-container">
         <div class="foodimage-text">
             <img src="assests/images/food.jpeg">
             <div class="about-text">
@@ -82,6 +77,7 @@
         </div>
     </section>
 
+    
 
     <section id="events" class="highlight-bottom2 paragraph-text">
         <h1>Catalogs</h1>
@@ -91,6 +87,8 @@
         </p>
         <p>Artist Rights<br>Society (ARS),<br>New York / VG<br>Bild-Kunst,<br>Bonn.</p>
     </section>
+
+
 </body>
 
 </html>
