--- a/index.html
+++ b/index.html
@@ -13,20 +13,41 @@
 </head>
 
 <body>
-    <nav>
-        <h1 class="logo">Ch.</h1>
-        <ul>
-            <li><a href="#collection" class="paragraph-text">Collection</a></li>
-            <li><a href="#exhibitions" class="paragraph-text">Exhibitions</a></li>
-            <li><a href="#events" class="paragraph-text">Events</a></li>
-            <li><a class="paragraph-text">Buy Tickets</a></li>
-        </ul>
-    </nav>
+       <!-- <nav>
+            <div class="logo">
+                <h1>Ch.</h1>
+            </div>
+            <ul>
+                <li><a href="#collection" class="paragraph-text">Collection</a></li>
+                <li><a href="#exhibitions" class="paragraph-text">Exhibitions</a></li>
+                <li><a href="#events" class="paragraph-text">Events</a></li>
+                <li><a class="paragraph-text">Buy Tickets</a></li>
+            </ul>
+        </nav>
 
     <div class="top_header">
         <h1 class="top_header-item">Selections from the Art Institute of Chicago</h1>
     </div>
+    -->
     <!-- <div class="main_images"> -->
+
+        <nav class="navbar">
+            <div class="navbar-container container">
+              <input type="checkbox" name="" id="" />
+              <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+              </div>
+              <ul class="menu-items">
+                <li><a href="#collection" class="paragraph-text">Collection</a></li>
+                <li><a href="#exhibitions" class="paragraph-text">Exhibition</a></li>
+                <li><a href="#events" class="paragraph-text">Events</a></li>
+                <li><a class="paragraph-text">Buy Tickets</a></li>
+              </ul>
+              <h1 class="logo">Ch.</h1>
+            </div>
+          </nav>
 
     <section id="collection" class="features-wrapper">
 
@@ -77,7 +98,7 @@
         </div>
     </section>
 
-    
+
 
     <section id="events" class="highlight-bottom2 paragraph-text">
         <h1>Catalogs</h1>
