fixing the header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-       <!-- <nav>
+    <!-- <nav>
             <div class="logo">
                 <h1>Ch.</h1>
             </div>
@@ -31,23 +31,27 @@
     -->
     <!-- <div class="main_images"> -->
 
-        <nav class="navbar">
-            <div class="navbar-container container">
-              <input type="checkbox" name="" id="" />
-              <div class="hamburger-lines">
+    <nav class="navbar">
+        <div class="navbar-container container">
+            <input type="checkbox" name="" id="" />
+            <div class="hamburger-lines">
                 <span class="line line1"></span>
                 <span class="line line2"></span>
                 <span class="line line3"></span>
-              </div>
-              <ul class="menu-items">
+            </div>
+            <ul class="menu-items">
                 <li><a href="#collection" class="paragraph-text">Collection</a></li>
                 <li><a href="#exhibitions" class="paragraph-text">Exhibition</a></li>
                 <li><a href="#events" class="paragraph-text">Events</a></li>
                 <li><a class="paragraph-text">Buy Tickets</a></li>
-              </ul>
-              <h1 class="logo">Ch.</h1>
-            </div>
-          </nav>
+            </ul>
+            <h1 class="logo">Ch.</h1>
+        </div>
+    </nav>
+
+    <div class="top_header">
+        <h1 class="top_header-item">Selections from the Art Institute of Chicago</h1>
+    </div>
 
     <section id="collection" class="features-wrapper">
 
